Shift-select files. Fix min-height and menu overflow.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -952,7 +952,8 @@ aside {
   float: left;
   width: 220px;
   padding: 10px 0 0 10px;
-  display: none; }
+  display: none;
+  overflow-y: auto; }
   aside header {
     background-color: #000;
     color: #fff;
@@ -1243,7 +1244,7 @@ See the LICENSE file or http://opensource.org/licenses/MIT for more information.
   border-right: 1px solid #fff;
   border-bottom: 1px solid #fff;
   overflow-y: scroll;
-  min-height: 200px;
+  /*min-height: 200px;*/
   flex-grow: 1;
   position: relative; }
   .files-panel.readonly {
