--- a/src/assets/scss/partials/_workspace.scss
+++ b/src/assets/scss/partials/_workspace.scss
@@ -10,6 +10,7 @@ aside {
     width: 220px;
     padding: 10px 0 0 10px;
     display: none;
+    overflow-y: auto;
 
     header {
         background-color: #000;
